tests/fixtures/errors/invalid_import_missing_module.puml
@startuml
!import does/not/exist
Alice -> Bob: unreachable
@enduml
